# Simple-Social-Network

./: docker-compose.yaml
BE/: Dockerfile  config.py  db.sqlite3  main.py  pyproject.toml  schemas.py
BE/api/posts/: endpoints.py
BE/core/: models.py
BE/service/: database.py
FE/Social-Network/: README.md  angular.json  package-lock.json  package.json
FE/Social-Network/src/app/: app-routing.module.ts  app.component.spec.ts  app.module.ts
FE/Social-Network/src/app/components/main/: main.component.css  main.component.html
FE/Social-Network/src/app/components/posts/: posts.component.css  posts.component.html  posts.component.ts
FE/Social-Network/src/app/components/single/: single.component.ts
FE/Social-Network/src/app/shared/: post.service.ts  posts.ts
